...
            haptics="light"
            onPress={() => {
              AudioHapticsManager.lightInteraction();
              router.push('/(auth)/login');
            }}
            variant="secondary"
            title="Log in"
          />
        </Animated.View>
      </View>
    </SafeAreaView>
  );
}
...
